--- a/torn/warhits.html
+++ b/torn/warhits.html
@@ -87,11 +87,32 @@
             word-break: break-all;
             margin-bottom: 20px;
         }
+        .faq-button {
+            display: inline-flex;
+            align-items: center;
+            gap: 5px;
+            padding: 8px 16px;
+            background-color: #2196F3;
+            color: white;
+            text-decoration: none;
+            border-radius: 4px;
+            font-size: 14px;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
+        .faq-button:hover {
+            background-color: #1976D2;
+        }
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Torn War Hits Tracker</h1>
+        <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
+            <h1 style="margin: 0;">Torn War Hits Tracker</h1>
+            <a href="faq.html" class="faq-button" title="Frequently Asked Questions">
+                <span style="font-size: 20px;">❓</span> FAQ
+            </a>
+        </div>
         
         <!-- API Key Input Form (shown when no API key in URL) -->
         <div id="apiKeyForm" class="api-key-form">
@@ -138,10 +159,6 @@
                 <div id="warInfo" style="background-color: #fff3cd; padding: 15px; border-radius: 4px; margin-bottom: 20px;">
                     <h3 style="margin-top: 0;">War Status</h3>
                     <div id="warContent"></div>
-                </div>
-                
-                <div style="margin-top: 20px; padding: 15px; background-color: #e8f5e9; border-radius: 4px;">
-                    <p><strong>Next Step:</strong> War hits tracking functionality will be implemented here...</p>
                 </div>
             </div>
         </div>
