--- a/torn/index.html
+++ b/torn/index.html
@@ -1,13 +1,21 @@
-# Boiler plate HTML file for Torn
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Torn</title>
+    <title>Torn Tools</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Welcome to Torn</h1>
-    <p>This is a placeholder HTML file for the Torn project.</p>
+    <div class="container">
+        <h1>Torn Tools</h1>
+        <p class="subtitle">Helpful utilities for players of Torn</p>
+        
+        <div class="tool-card">
+            <h2>War Hits Tracker</h2>
+            <p>Track your personal hits during faction ranked wars in real-time. Monitor your contribution to active wars and see how many successful attacks you've made against enemy factions.</p>
+            <a href="warhits.html" class="tool-link">Open War Hits Tracker →</a>
+        </div>
+    </div>
 </body>
 </html>
