--- a/torn/warhits.html
+++ b/torn/warhits.html
@@ -4,145 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Torn - War Hits Tracker</title>
+    <link rel="stylesheet" href="styles.css">
     <script src="torn-api.js"></script>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            max-width: 800px;
-            margin: 50px auto;
-            padding: 20px;
-            background-color: #f5f5f5;
-        }
-        .container {
-            background-color: white;
-            padding: 30px;
-            border-radius: 8px;
-            box-shadow: 0 2px 4px rgba(0,0,0,0.1);
-        }
-        h1 {
-            color: #333;
-            margin-bottom: 10px;
-        }
-        .subtitle {
-            color: #666;
-            margin-bottom: 30px;
-        }
-        .api-key-form {
-            margin-top: 20px;
-        }
-        label {
-            display: block;
-            margin-bottom: 8px;
-            font-weight: bold;
-            color: #333;
-        }
-        input[type="text"] {
-            width: 100%;
-            padding: 10px;
-            border: 1px solid #ddd;
-            border-radius: 4px;
-            font-size: 14px;
-            box-sizing: border-box;
-        }
-        button {
-            margin-top: 15px;
-            padding: 12px 24px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 16px;
-        }
-        button:hover {
-            background-color: #45a049;
-        }
-        .logout-button {
-            margin-top: 15px;
-            padding: 8px 16px;
-            background-color: #f44336;
-            color: white;
-            border: none;
-            border-radius: 4px;
-            cursor: pointer;
-            font-size: 14px;
-        }
-        .logout-button:hover {
-            background-color: #d32f2f;
-        }
-        .info {
-            margin-top: 20px;
-            padding: 15px;
-            background-color: #e3f2fd;
-            border-left: 4px solid #2196F3;
-            border-radius: 4px;
-        }
-        .info p {
-            margin: 5px 0;
-            color: #555;
-            font-size: 14px;
-        }
-        .error {
-            color: #d32f2f;
-            margin-top: 10px;
-            display: none;
-        }
-        .tracker-content {
-            display: none;
-        }
-        .tracker-content.active {
-            display: block;
-        }
-        .api-key-display {
-            background-color: #f9f9f9;
-            padding: 10px;
-            border-radius: 4px;
-            word-break: break-all;
-            margin-bottom: 20px;
-        }
-        .faq-button {
-            display: inline-flex;
-            align-items: center;
-            gap: 5px;
-            padding: 8px 16px;
-            background-color: #2196F3;
-            color: white;
-            text-decoration: none;
-            border-radius: 4px;
-            font-size: 14px;
-            font-weight: bold;
-            transition: background-color 0.3s;
-        }
-        .faq-button:hover {
-            background-color: #1976D2;
-        }
-        .warning {
-            background-color: #fff3cd;
-            border-left: 4px solid #ffc107;
-            padding: 15px;
-            border-radius: 4px;
-            margin-bottom: 20px;
-            display: none;
-        }
-        .warning.active {
-            display: block;
-        }
-        .warning strong {
-            color: #856404;
-        }
-        .warning p {
-            color: #856404;
-            margin: 5px 0;
-        }
-        .warning ul {
-            margin: 10px 0;
-            padding-left: 20px;
-        }
-        .warning li {
-            color: #856404;
-            margin: 5px 0;
-        }
-    </style>
 </head>
 <body>
     <div class="container">
