added central auth and back button

--- a/torn/index.html
+++ b/torn/index.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Torn Tools</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="auth.js"></script>
 </head>
 <body>
+    <div style="display: flex; justify-content: flex-end; max-width: 800px; margin: 0 auto; padding: 10px 20px;">
+        <div id="authContainer" class="header-auth"></div>
+    </div>
     <div class="container">
         <h1>Torn Tools</h1>
         <p class="subtitle">Helpful utilities for players of Torn</p>
