--- a/torn/faq.html
+++ b/torn/faq.html
@@ -5,8 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FAQ - Torn War Hits Tracker</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="auth.js"></script>
 </head>
 <body>
+    <div style="display: flex; justify-content: flex-end; max-width: 800px; margin: 0 auto; padding: 10px 20px;">
+        <div id="authContainer" class="header-auth"></div>
+    </div>
     <div class="container">
         <a href="warhits.html" class="back-button">← Back to War Hits Tracker</a>
         
