implemented rental tracker

--- a/torn/index.html
+++ b/torn/index.html
@@ -20,6 +20,12 @@
             <p>Track your personal hits during faction ranked wars in real-time. Monitor your contribution to active wars and see how many successful attacks you've made against enemy factions.</p>
             <a href="warhits.html" class="tool-link">Open War Hits Tracker →</a>
         </div>
+
+        <div class="tool-card">
+            <h2>Property Rentals Tracker</h2>
+            <p>Monitor all your rented properties and manage lease extensions efficiently. Get alerts when it's time to offer lease extensions (5-10 days remaining) and never miss a renewal deadline.</p>
+            <a href="rentals.html" class="tool-link">Open Property Rentals Tracker →</a>
+        </div>
     </div>
 </body>
 </html>
