--- a/torn/rentals.html
+++ b/torn/rentals.html
@@ -237,14 +237,125 @@
             opacity: 0.5;
             background-color: #f5f5f5;
         }
+
+        /* Mobile responsive styles */
+        @media screen and (max-width: 768px) {
+            .container {
+                padding: 15px;
+            }
+
+            .summary {
+                flex-direction: column;
+                gap: 10px;
+            }
+
+            .summary-card {
+                padding: 10px;
+            }
+
+            .summary-card h3 {
+                font-size: 12px;
+                height: auto;
+            }
+
+            .summary-card .value {
+                font-size: 20px;
+            }
+
+            /* Hide table headers */
+            .properties-table thead {
+                display: none;
+            }
+
+            /* Make each row a card */
+            .properties-table tbody tr {
+                display: block;
+                margin-bottom: 15px;
+                border: 1px solid #ddd;
+                border-radius: 8px;
+                padding: 15px;
+                background-color: white;
+            }
+
+            .properties-table tbody tr:hover {
+                background-color: white;
+            }
+
+            .properties-table tbody tr.row-hidden {
+                background-color: #f9f9f9;
+            }
+
+            /* Stack table cells vertically */
+            .properties-table td {
+                display: block;
+                text-align: left;
+                border-bottom: none;
+                padding: 8px 0;
+            }
+
+            /* Add labels before each cell */
+            .properties-table td:nth-child(1)::before {
+                content: "Property ID: ";
+                font-weight: bold;
+                color: #666;
+            }
+
+            .properties-table td:nth-child(2)::before {
+                content: "Type: ";
+                font-weight: bold;
+                color: #666;
+            }
+
+            .properties-table td:nth-child(3)::before {
+                content: "Tenant: ";
+                font-weight: bold;
+                color: #666;
+            }
+
+            .properties-table td:nth-child(4)::before {
+                content: "Days Remaining: ";
+                font-weight: bold;
+                color: #666;
+            }
+
+            .properties-table td:nth-child(5)::before {
+                content: "Status: ";
+                font-weight: bold;
+                color: #666;
+            }
+
+            .properties-table td:nth-child(6)::before {
+                content: "Actions: ";
+                font-weight: bold;
+                color: #666;
+            }
+
+            /* Adjust action buttons for mobile */
+            .action-buttons {
+                justify-content: flex-start;
+                margin-top: 5px;
+            }
+
+            .action-arrow {
+                font-size: 20px;
+            }
+
+            .hide-button {
+                font-size: 20px;
+            }
+
+            .info-box {
+                padding: 10px;
+            }
+
+            .info-box ul {
+                padding-left: 15px;
+            }
+        }
     </style>
 </head>
 <body>
-    <div style="display: flex; justify-content: space-between; align-items: center; max-width: 1200px; margin: 0 auto; padding: 10px 20px;">
-        <a href="index.html" class="back-button" style="margin: 0;">← Back to Tools</a>
-        <div id="authContainer" class="header-auth"></div>
-    </div>
-
+    <script>renderHeader({ showBackButton: true, maxWidth: '1200px' });</script>
     <div class="container" style="max-width: 1200px;">
         <h1>Property Rentals Tracker</h1>
         <p class="subtitle">Monitor your rented properties and manage lease extensions</p>
