--- a/torn/warhits.html
+++ b/torn/warhits.html
@@ -9,20 +9,13 @@
     <script src="torn-api.js"></script>
 </head>
 <body>
-    <div style="display: flex; justify-content: flex-end; max-width: 800px; margin: 0 auto; padding: 10px 20px;">
-        <div id="authContainer" class="header-auth"></div>
-    </div>
+    <script>renderHeader({ showBackButton: true, maxWidth: '800px' });</script>
     <div class="container">
         <div style="display: flex; justify-content: space-between; align-items: center; margin-bottom: 10px;">
             <h1 style="margin: 0;">Torn War Hits Tracker</h1>
-            <div style="display: flex; gap: 10px;">
-                <a href="index.html" class="faq-button" style="background-color: #4CAF50;" title="Back to Home">
-                    ← Back
-                </a>
-                <a href="faq.html" class="faq-button" title="Frequently Asked Questions">
-                    <span style="font-size: 20px;">❓</span> FAQ
-                </a>
-            </div>
+            <a href="faq.html" class="faq-button" title="Frequently Asked Questions">
+                <span style="font-size: 20px;">❓</span> FAQ
+            </a>
         </div>
         
         <!-- Tracker Content -->
